<?xml version="1.0" encoding="utf-8"?>
<androidx.preference.PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <EditTextPreference
        android:key="@string/db_url"
        android:title="Database URL"
        app:useSimpleSummaryProvider="true" />

    <ListPreference
        android:key="@string/pref_left_side"
        android:title="@string/label_pref_left_side_detail"
        app:useSimpleSummaryProvider="true"
        android:entries="@array/pref_display_entries"
        android:defaultValue="@string/pref_display_ipv4"
        android:entryValues="@array/pref_display_values"/>
        />
    <ListPreference
        android:key="@string/pref_right_side"
        android:title="@string/label_pref_right_side_detail"
        app:useSimpleSummaryProvider="true"
        android:defaultValue="@string/pref_display_hostname"
        android:entries="@array/pref_display_entries"
        android:entryValues="@array/pref_display_values"/>
    />
</androidx.preference.PreferenceScreen>